Fix popup position
Workitems:
#36522 Right click request details Pop up in the timeline view: On right clicking the request pop up, it goes out of the screen and when you scroll the information also gets lost
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C33310

--- a/ShipTech10/app/css/custom.css
+++ b/ShipTech10/app/css/custom.css
@@ -4826,7 +4826,9 @@ div[uib-modal-window] .btn.export_xls, div[uib-modal-window] .btn.export_csv, di
 .newStatusColoured.contextmenu .content .voyageDetailSection .action-btn{
     float: right;
     padding: 2px 5px;
-    margin: 10px 0;
+    margin: 3px 0;
+    display: flex;
+    align-items: center;
 }
 .newStatusColoured.contextmenu .content .cancelBunkerStrategy {
 	display: none;
